--- a/www/template.html
+++ b/www/template.html
@@ -17,6 +17,7 @@
 
         div.sc-toolbox header {
           background-image: url('http://salecycle.com/responsive/images/logo-salecycle.png');
+          background-position: center;
           background-size: 100px;
           background-repeat: no-repeat;
           background-color: #232b2e !important;
@@ -41,7 +42,7 @@
     </style>
     <div class="sc-toolbox">
 	<header>
-	    <h1>Toolbox</h1>
+	    <h1>Script Generator</h1>
 	</header>
 	<section>
 	    <a href="#" class="select">Select an element</a>
